[gd_scene load_steps=5 format=3 uid="uid://mc8p45i0t33m"]

[ext_resource type="Script" path="res://Scripts/PendulumWave.gd" id="1_psio8"]
[ext_resource type="PackedScene" uid="uid://f5cun7244dok" path="res://Scenes/LimitLine.tscn" id="2_alp8e"]

[sub_resource type="Environment" id="Environment_4en3q"]
background_mode = 3
background_color = Color(0.568627, 0.152941, 0.764706, 1)
glow_enabled = true
glow_bloom = 0.1
glow_blend_mode = 0
glow_hdr_threshold = 0.6
adjustment_enabled = true
adjustment_brightness = 1.35
adjustment_contrast = 1.63
adjustment_saturation = 2.19

[sub_resource type="CameraAttributesPhysical" id="CameraAttributesPhysical_lj433"]

[node name="PendulumWave" type="Node2D"]
script = ExtResource("1_psio8")
audio_path = "res://Audio/Glockenspiel/F# minor pentatonic/"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4en3q")
camera_attributes = SubResource("CameraAttributesPhysical_lj433")

[node name="PendulumLine" type="Line2D" parent="."]
unique_name_in_owner = true
width = 1.2
default_color = Color(0, 0.79, 1.97, 0.39)

[node name="LeftLimitLine" parent="." instance=ExtResource("2_alp8e")]
unique_name_in_owner = true

[node name="RightLimitLine" parent="." instance=ExtResource("2_alp8e")]
unique_name_in_owner = true
